Update package-lock.json, package.json, app.html, and 27 more files

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"drizzle-orm": "^0.40.0",
-		"postgres": "^3.4.5"
+		"postgres": "^3.4.5",
+		"svelte-flags": "^2.0.1"
 	}
 }
